[package]
name = "heci-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = {version='0.41.0', features=[
"Win32_System_IO",
"Win32_Foundation",
"Win32_Storage_FileSystem",
"Win32_Security",
"Win32_Devices_DeviceAndDriverInstallation",
]}
